@@ -33,6 +33,6 @@ public class OnErrorFunction
 		checkStack(inStack);
 		String label = inStack.pop().toString();
 		ctx.setOnErrorLabel(label);
-		inStack.push(new Double(0.0));
+		inStack.push(Double.valueOf(0.0));
 	}
 }
